--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon --inspect ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.6.2",
@@ -14,6 +15,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "lowdb": "^1.0.0",
+    "mongodb": "^3.2.7",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
     "nodemon": "^1.19.1",
