--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jade": "~1.11.0",
     "lowdb": "^1.0.0",
     "mongodb": "^3.2.7",
+    "mongoose": "^5.6.4",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
     "nodemon": "^1.19.1",
