--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "nodemon --inspect ./bin/www"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-mongodb-session": "^2.2.0",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.10.0",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "ejs": "^2.6.2",
     "express": "~4.16.0",
     "express-session": "^1.16.2",
@@ -23,6 +25,8 @@
     "mongoose": "^5.6.4",
     "morgan": "~1.9.0",
     "mysql2": "^1.6.5",
+    "nodemailer": "^6.3.0",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^1.19.1",
     "pug": "^2.0.4",
     "sequelize": "^5.9.4",
