--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
