--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^1.19.1",
     "pug": "^2.0.4",
+    "secure-random-string": "^1.1.2",
     "sequelize": "^5.9.4",
     "sqlstring": "^2.3.1",
     "uuid": "^3.3.2"
