--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.6.2",
     "express": "~4.16.0",
     "express-session": "^1.16.2",
+    "express-validator": "^6.1.1",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "lowdb": "^1.0.0",
