--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sendgrid/mail": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.14.0",
     "connect-mongodb-session": "^2.2.0",
     "cookie-parser": "~1.4.3",
     "csurf": "^1.10.0",
@@ -25,10 +26,13 @@
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.4",
     "morgan": "~1.9.0",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "mysql2": "^1.6.5",
     "nodemailer": "^6.3.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "nodemon": "^1.19.1",
+    "pdfkit": "^0.10.0",
     "pug": "^2.0.4",
     "secure-random-string": "^1.1.2",
     "sequelize": "^5.9.4",
